--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <div class="container-fluid" id="lsq-banonus-main">
-    <h1>Main</h1>
+  <div class="container-fluid">
     <ui-view></ui-view>
   </div>
   <script src="dist/vendor.min.js"></script>
