--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 
 <head>
-  <base href="/" />
+  <base href="/widgets/" />
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <link href="dist/vendor.min.css" rel="stylesheet">
   <link href="dist/ui-engineer-1.0.0.min.css" rel="stylesheet">
